--- a/custom.css
+++ b/custom.css
@@ -36,5 +36,15 @@ a:hover{
 }
 #avatar{
   max-width: 150px;
+  max-height:200px;
+  min-width:fit-content;
   
+}
+.slides-container video{
+  width: 100%;
+  height: 210px;
+}
+.slides-container img{
+  width: 100%;
+
 }
