--- a/custom.css
+++ b/custom.css
@@ -3,6 +3,11 @@ body{
 }
 header {
   color: white;
+  background-color: teal;
+  
+}
+.about-header{  
+  padding-top:180px;
 }
 header h4 {
   font-weight: lighter;
@@ -41,10 +46,13 @@ a:hover{
   
 }
 .slides-container video{
-  width: 100%;
-  height: 210px;
+  max-width: 320px;
+  min-width: 180px;
+  min-height: 1600px;
 }
 .slides-container img{
-  width: 100%;
-
+  max-width:320px;
+  min-height: 160px;
+  min-width: 180px;
+  max-height:200px;
 }
