--- a/custom.css
+++ b/custom.css
@@ -80,8 +80,7 @@ footer a{
   flex-wrap:nowrap;
 }
 .social-img{
-  width: 50px;
-  height: 50px;
+  max-width: 55px;
   color: white;
   background-color: white;
 }
